--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/zolcsika71/zolcsika71.github.io/issues"
   },
-  "homepage": "https://github.com/zolcsika71/zolcsika71.github.io#readme"
+  "homepage": "https://github.com/zolcsika71/zolcsika71.github.io#readme",
+  "dependencies": {
+    "jquery": "^3.5.1"
+  }
 }
